--- a/cap1/index.html
+++ b/cap1/index.html
@@ -1,12 +1,12 @@
-doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
+    <title>Em Chamas</title>
 </head>
 <body>
-    
+    <h1> SUZANNE COLLINS <br> EM CHAMAS
 </body>
 </html>
